<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lunar Club Tools</string>
    <string name="moon_info_tab">Moon Info</string>
    <string name="lunar_club_tab">Lunar Club</string>
    <string name="lunar2_club_tab">Lunar II Club</string>
    <!-- Ephemeris page strings -->
    <string name="eph_last_obs_text">Last Observation</string>
    <string name="eph_local_date_label">Date</string>
    <string name="eph_utc_date_label">Date (UTC)</string>
    <string name="eph_moon_age_label">Age</string>
    <string name="eph_moon_phase_label">Phase</string>
    <string name="eph_moon_illum_label">Illumination</string>
    <string name="eph_moon_colong_label">Colongitude</string>
    <string name="eph_phase_dates_text">Next Phase Dates</string>
    <string name="eph_iv_content_descr">Lunar phase indicator.</string>
    <string name="eph_no_text"></string>
    <!-- Lunar Club Special page strings -->
    <string name="lcsp_time_from_nm_text">Time from New Moon:</string>
    <string name="lcsp_cresent_waxing_text">Cresent Moon, Waxing</string>
    <string name="lcsp_om_in_nm_arms_text">Old Moon in New Moon\'s Arms</string>
    <string name="lcsp_time_to_nm_text">Time to New Moon:</string>
    <string name="lcsp_cresent_waning_text">Cresent Moon, Waning</string>
    <string name="lcsp_nm_in_om_arms_text">New Moon in Old Moon\'s Arms</string>
    <string name="lcsp_cjotm_text">Cow Jumping Over the Moon</string>
    <string name="lcsp_mitm_text">Man in the Moon</string>
    <string name="lcsp_witm_text">Woman in the Moon</string>
    <string name="lcsp_ritm_text">Rabbit in the Moon</string>
    <string name="lcsp_iv_content_descr">Indicator for visibility.</string>
    <string name="lcsp_out_of_limit">----</string>
    <!-- Lunar feature dialog strings -->
    <string name="feature_name">Name:</string>
    <string name="feature_type">Type:</string>
    <string name="feature_lat">Latitude:</string>
    <string name="feature_lon">Longitude:</string>
    <string name="feature_diameter">Diameter:</string>
    <string name="feature_quadname">Quad Name:</string>
    <string name="feature_quadcode">Quad Code:</string>
    <!-- About dialog strings -->
    <string name="about_label">About</string>
    <string name="about_shortcut">a</string>
    <string name="about_title">About Lunar Club Tools</string>
    <string name="about_program">Version %s\n@Copyleft 2012&#8211;2013\nType II Software</string>
    <string name="about_text">\
        <p>This is a program for determining what lunar features 
        are visible based on the current selenographic colongitude. The 
        features are taken from the observing lists of the 
        <a href="http://www.astroleague.org/al/obsclubs/lunar/lunar1.html">Lunar</a> and 
        <a href="http://www.astroleague.org/al/obsclubs/lunarII/lunarII1.html">Lunar II</a> 
        clubs from <a href="http://www.astroleague.org">The Astronomical League</a>. 
        </p>
    </string>
    <string name="empty">No features currently visible!</string>
    <!-- Date/Time setting dialog strings -->
    <string name="datetime_label">Set Date/Time</string>
    <string name="datetime_shortcut">d</string>
    <string name="datetime_title">Set the Date and Time</string>
    <string name="datetime_set_button_label">Set</string>
    <string name="datetime_now_button_label">Now!</string>
    <string name="datetime_cancel_button_label">Cancel</string>
</resources>