<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/feature_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feature_name" />

    <TextView
        android:id="@+id/feature_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feature_type" />

    <TextView
        android:id="@+id/feature_lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feature_lat" />

    <TextView
        android:id="@+id/feature_lon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feature_lon" />

    <TextView
        android:id="@+id/feature_diameter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feature_diameter" />

    <TextView
        android:id="@+id/feature_quadname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feature_quadname" />

    <TextView
        android:id="@+id/feature_quadcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feature_quadcode" />

</LinearLayout>
