<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/time_from_new_moon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lcsp_time_from_nm_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/cresent_waxing_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lcsp_cresent_waxing_text" />

        <ImageView
            android:id="@+id/cresent_waxing_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/lcsp_iv_content_descr"
            android:src="@android:drawable/btn_star_big_off" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/om_in_nm_arms_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lcsp_om_in_nm_arms_text" />

        <ImageView
            android:id="@+id/om_in_nm_arms_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/lcsp_iv_content_descr"
            android:src="@android:drawable/btn_star_big_off" />

    </LinearLayout>

</LinearLayout>
