<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:lct="http://schemas.android.com/apk/res-auto"
    android:id="@+id/GridLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/moon_info_gridlayout_left_buffer"
    android:paddingRight="@dimen/moon_info_gridlayout_right_buffer"
    lct:columnCount="4"
    lct:rowCount="12" >

    <TextView
        android:id="@+id/last_obs_tv"
        lct:layout_columnSpan="4"
        lct:layout_gravity="center"
        android:text="@string/eph_last_obs_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/local_date_label_tv"
        lct:layout_columnSpan="2"
        android:text="@string/eph_local_date_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/local_date_tv"
        lct:layout_columnSpan="2"
        android:paddingLeft="@dimen/moon_info_text_left_buffer"
        android:text="@string/eph_no_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/utc_date_label_tv"
        lct:layout_columnSpan="2"
        android:text="@string/eph_utc_date_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/utc_date_tv"
        lct:layout_columnSpan="2"
        android:paddingLeft="@dimen/moon_info_text_left_buffer"
        android:text="@string/eph_no_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/moon_age_label_tv"
        lct:layout_columnSpan="2"
        android:text="@string/eph_moon_age_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/moon_age_tv"
        lct:layout_columnSpan="2"
        android:paddingLeft="@dimen/moon_info_text_left_buffer"
        android:text="@string/eph_no_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/moon_phase_label_tv"
        lct:layout_columnSpan="2"
        android:text="@string/eph_moon_phase_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/moon_phase_tv"
        lct:layout_columnSpan="2"
        android:paddingLeft="@dimen/moon_info_text_left_buffer"
        android:text="@string/eph_no_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/moon_illum_label_tv"
        lct:layout_columnSpan="2"
        android:text="@string/eph_moon_illum_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/moon_illum_tv"
        lct:layout_columnSpan="2"
        android:paddingLeft="@dimen/moon_info_text_left_buffer"
        android:text="@string/eph_no_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/moon_colong_label_tv"
        lct:layout_columnSpan="2"
        android:text="@string/eph_moon_colong_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/moon_colong_tv"
        lct:layout_columnSpan="2"
        android:paddingLeft="@dimen/moon_info_text_left_buffer"
        android:text="@string/eph_no_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <View
        android:layout_height="@dimen/hrule_layout_height"
        lct:layout_columnSpan="4"
        android:background="@color/horizontal_rule"
        android:paddingBottom="@dimen/hrule_bottom_padding"
        android:paddingTop="@dimen/hrule_top_padding" />
   
   <TextView
        android:id="@+id/phase_dates_tv"
        lct:layout_columnSpan="4"
        lct:layout_gravity="center"
        android:text="@string/eph_phase_dates_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <ImageView
        android:id="@+id/first_phase_iv"
        lct:layout_columnSpan="2"
        lct:layout_gravity="center_horizontal"
        android:contentDescription="@string/eph_iv_content_descr"
        android:src="@drawable/ic_blank" />
    
    <TextView
        android:id="@+id/first_phase_tv"
        lct:layout_columnSpan="2"
        lct:layout_gravity="center_vertical"
        android:paddingLeft="@dimen/moon_info_text_left_buffer"
        android:text="@string/eph_no_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/second_phase_iv"
        lct:layout_columnSpan="2"
        lct:layout_gravity="center_horizontal"
        android:contentDescription="@string/eph_iv_content_descr"
        android:src="@drawable/ic_blank" />
    
    <TextView
        android:id="@+id/second_phase_tv"
        lct:layout_columnSpan="2"
        lct:layout_gravity="center_vertical"
        android:paddingLeft="@dimen/moon_info_text_left_buffer"
        android:text="@string/eph_no_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
     <ImageView
        android:id="@+id/third_phase_iv"
        lct:layout_columnSpan="2"
        lct:layout_gravity="center_horizontal"
        android:contentDescription="@string/eph_iv_content_descr"
        android:src="@drawable/ic_blank" />
    
    <TextView
        android:id="@+id/third_phase_tv"
        lct:layout_columnSpan="2"
        lct:layout_gravity="center_vertical"
        android:paddingLeft="@dimen/moon_info_text_left_buffer"
        android:text="@string/eph_no_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <ImageView
        android:id="@+id/fourth_phase_iv"
        lct:layout_columnSpan="2"
        lct:layout_gravity="center_horizontal"
        android:contentDescription="@string/eph_iv_content_descr"
        android:src="@drawable/ic_blank" />
    
    <TextView
        android:id="@+id/fourth_phase_tv"
        lct:layout_columnSpan="2"
        lct:layout_gravity="center_vertical"
        android:paddingLeft="@dimen/moon_info_text_left_buffer"
        android:text="@string/eph_no_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />
 
    <!-- Empty view to stop last row from filling to bottom of screen -->
    <View
        lct:layout_columnSpan="4" />

</android.support.v7.widget.GridLayout>
